--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/CreateEdit.cshtml
@@ -17,7 +17,7 @@
                         <div class="col">
                             @if (Model.GymMemberDetailId > 0)
                             {
-                                <h4 class="page-title">Update Member</h4>
+                                <h4 class="page-title"><span>Update Member- @Model.FirstName @Model.LastName (@Model.PersonCode)</span></h4>
                             }
                             else
                             {
