--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_List.cshtml
@@ -18,8 +18,11 @@
                     foreach (var item in Model?.GymMemberDetailsList)
                     {
                         <tr>
+                            <td style="text-align: center; width: 0px"><img src="@item.ImagePath" class="rounded-circle thumb-xs me-1" /></td>
                             <td>@item.FirstName</td>
                             <td>@item.LastName</td>
+                            <td>@item.MobileNumber</td>
+                            <td>@item.EmailId</td>
                             @* <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.DefaultFlag)
                             </td> *@
