--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
@@ -10,10 +10,10 @@
     <div class="card-body">
         <div class="files-nav">
             <div class="nav flex-column nav-pills" id="files-tab" aria-orientation="vertical">
-                <a class="nav-link" href="/GymMemberDetails/Edit?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
+                <a class="nav-link" href="/GymMemberDetails/UpdateMemberPersonalDetails?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
                     <i class="ti-menu"></i><h5 class="m-0 ps-2">Personal Details</h5>
                 </a>
-                <a class="nav-link" href="/GymMemberDetails/MemberOtherDetails?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
+                <a class="nav-link" href="/GymMemberDetails/MemberOtherDetails?gymMemberDetailId=@gymMemberDetailId" aria-selected="true">
                     <i class="ti-key"></i><h5 class="m-0 ps-2">Other Details</h5>
                 </a>
                 <a class="nav-link" href="/GymMemberDetails/MemberBodyMeasurement?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
