--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/CreateEdit.cshtml
@@ -59,7 +59,7 @@
                 opens: "right",
                 autoApply: true,
                 "locale": {
-                    "format": "YYYY-MM-DD",
+                    // "format": "DD-MMM-YYYY",
                     "separator": " - ",
                     "applyLabel": "Apply",
                     "cancelLabel": "Cancel",
@@ -105,7 +105,7 @@
                 opens: "right",
                 autoApply: true,
                 "locale": {
-                    "format": "YYYY-MM-DD",
+                    // "format": "DD-MMM-YYYY",
                     "separator": " - ",
                     "applyLabel": "Apply",
                     "cancelLabel": "Cancel",
