--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_CreateEditGeneralPerson.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_CreateEditGeneralPerson.cshtml
@@ -7,17 +7,18 @@
 
 @Html.AntiForgeryToken()
 @Html.HiddenFor(m => m.PersonId)
-<div class="row"> 
+<div class="row">
     <div class="col-lg-3">
         <div class="mb-3">
-            @Html.LabelFor(x => x.Title, new { @class = "form-label required" })
+            @Html.LabelFor(x => x.PersonTitle, new { @class = "form-label required" })
             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
        {
-           DropdownSelectedValue = Model.Title ?? string.Empty,
-           DropdownName = "Title",
-           GroupCode = DropdownTypeEnum.Title.ToString()
+           DropdownSelectedValue = Model.PersonTitle ?? string.Empty,
+           DropdownName = "PersonTitle",
+           GroupCode = DropdownTypeEnum.Title.ToString(),
+           IsTextValueSame = true
        })
-            @Html.ValidationMessageFor(x => x.Title)
+            @Html.ValidationMessageFor(x => x.PersonTitle)
         </div>
     </div>
     <div class="col-lg-3">
@@ -41,16 +42,6 @@
             @Html.ValidationMessageFor(x => x.LastName)
         </div>
     </div>
-    @if (Model.PersonId > 0)
-    {
-        <div class="col-lg-3">
-            <div class="mb-3">
-                @Html.LabelFor(x => x.PersonCode, new { @class = "form-label required" })
-                @Html.TextBoxFor(x => x.PersonCode, new { @class = "form-control" })
-                @Html.ValidationMessageFor(x => x.PersonCode)
-            </div>
-        </div>
-    }
     <div class="col-lg-3">
         <div class="mb-3">
             @Html.LabelFor(x => x.GenderEnumId, new { @class = "form-label required" })
@@ -65,14 +56,14 @@
     <div class="col-lg-3">
         <div class="mb-3">
             @Html.LabelFor(x => x.DateOfBirth, new { @class = "form-label" })
-            @Html.TextBoxFor(x => x.DateOfBirth, new { @class = "form-control" })
+            @Html.TextBoxFor(x => x.DateOfBirth, new { @class = "form-control", @readonly = "true" })
             @Html.ValidationMessageFor(x => x.DateOfBirth)
         </div>
     </div>
     <div class="col-lg-3">
         <div class="mb-3">
             @Html.LabelFor(x => x.AnniversaryDate, new { @class = "form-label" })
-            @Html.TextBoxFor(x => x.AnniversaryDate, new { @class = "form-control" })
+            @Html.TextBoxFor(x => x.AnniversaryDate, new { @class = "form-control", @readonly = "true" })
             @Html.ValidationMessageFor(x => x.AnniversaryDate)
         </div>
     </div>
@@ -111,7 +102,7 @@
        {
            DropdownType = DropdownTypeEnum.MaritalStatus.ToString(),
            DropdownName = "MaritalStatus",
-           DropdownSelectedValue = Model.MaritalStatus ?? string.Empty
+           DropdownSelectedValue = Model.MaritalStatus ?? string.Empty,
        })
             @Html.ValidationMessageFor(x => x.MaritalStatus)
         </div>
@@ -131,12 +122,12 @@
     </div>
     <div class="col-lg-3">
         <div class="mb-3">
-            @Html.LabelFor(x => x.BloodGroup, new { @class = "form-label required" })
+            @Html.LabelFor(x => x.BloodGroup, new { @class = "form-label" })
             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
        {
            DropdownType = DropdownTypeEnum.BloodGroups.ToString(),
            DropdownName = "BloodGroup",
-           DropdownSelectedValue = Model.BloodGroup ?? string.Empty
+           DropdownSelectedValue = Model.BloodGroup ?? string.Empty,
        })
             @Html.ValidationMessageFor(x => x.BloodGroup)
         </div>
