--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/CreateEdit.cshtml
@@ -5,7 +5,7 @@
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <!-- Page Content-->
-<div class="page-content mt-5">
+<div class="page-content mt-3">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
@@ -58,5 +58,9 @@
                 </div>
             </div>
         </div>
+        @if (Model.GeneralEnumaratorGroupId > 0)
+        {
+            @Html.Partial("~/Views/GeneralMaster/GeneralEnumaratorGroup/_GeneralEnumList.cshtml", Model)
+        }
     </div>
 </div>
