--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -128,6 +128,7 @@
     <script src="~/js/coditech/common/coditechdatatable.js"></script>
     <script src="~/js/coditech/common/coditechnotification.js"></script>
     <script src="~/js/coditech/adminrolemaster.js"></script>
+    <script src="~/js/coditech/generalenumaratorgroup.js"></script>
 </body>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
