--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralOccupationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralOccupationMaster/CreateEdit.cshtml
@@ -28,19 +28,19 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.GeneralOccupationMasterId)
-                            
+
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.OccupationName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.OccupationName, new { @class = "form-control"})
+                                        @Html.TextBoxFor(x => x.OccupationName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.OccupationName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.DisplayOrder, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.DisplayOrder, new { @class = "form-control", type="number"})
+                                        @Html.TextBoxFor(x => x.DisplayOrder, new { @class = "form-control", type = "number", @maxLength = "3" })
                                         @Html.ValidationMessageFor(x => x.DisplayOrder)
                                     </div>
                                 </div>
