--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/_CreateEditGeneralEnum.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/_CreateEditGeneralEnum.cshtml
@@ -65,6 +65,14 @@
                                         @Html.ValidationMessageFor(x => x.SequenceNumber)
                                     </div>
                                 </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/Edit?generalEnumaratorGroupId=@Model.GeneralEnumaratorGroupId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
