--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/_GeneralEnumList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralEnumaratorGroup/_GeneralEnumList.cshtml
@@ -22,6 +22,7 @@
                                         <th>Related With</th>
                                         <th>Enum Value</th>
                                         <th>Sequence Number</th>
+                                        <th>Is Active</th>
                                         <th class="text-center" style="width:10%;">Action</th>
                                     </tr>
                                 </thead>
@@ -36,6 +37,7 @@
                                                 <td>@item.RelatedWith</td>
                                                 <td>@item.EnumValue</td>
                                                 <td>@item.SequenceNumber</td>
+                                                <td class="text-center">@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)</td>
                                                 <td class="text-center">
                                                     <a href="../@controllerName/CreateEditEnumarator?generalEnumaratorGroupId=@item.GeneralEnumaratorGroupId&generalEnumaratorId=@item.GeneralEnumaratorId" title="Update Enum" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                                     <a href="../@controllerName/DeleteEnumarator?generalEnumaratorGroupId=@item.GeneralEnumaratorGroupId&generalEnumaratorIds=@item.GeneralEnumaratorId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
