--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationDetails/CreateEdit.cshtml
@@ -167,7 +167,7 @@
                 opens: "right",
                 autoApply: false,
                 "locale": {
-                    "format": "DD/MM/YYYY",
+                    "format": "DD-MM-YYYY",
                     "separator": " - ",
                     "applyLabel": "Apply",
                     "cancelLabel": "Cancel",
