--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_CreateEditMemberFollowUp.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_CreateEditMemberFollowUp.cshtml
@@ -23,6 +23,7 @@
     ;
     @Html.HiddenFor(x => x.GymMemberFollowUpId)
     @Html.HiddenFor(x => x.GymMemberDetailId)
+    @Html.HiddenFor(x => x.PersonId)
     <div class="modal-body">
         <div class="row">
             <div class="col-lg-12">
@@ -80,7 +81,7 @@
             opens: "right",
             autoApply: true,
             "locale": {
-                "format": "DD/MM/YYYY",
+                @* "format": "DD-MM-YYYY", *@
                 "separator": " - ",
                 "applyLabel": "Apply",
                 "cancelLabel": "Cancel",
