--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_GymMemberDetailsSidePannel.cshtml
@@ -28,6 +28,9 @@
                 <a class="nav-link" href="/GymMemberDetails/MemberPaymentHistory?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
                     <i class="ti-user"></i><h5 class="m-0 ps-2">Payment History</h5>
                 </a>
+                <a class="nav-link" href="/GymMemberDetails/UpdateMemberAddressDetails?gymMemberDetailId=@gymMemberDetailId&personId=@personId" aria-selected="true">
+                    <i class="ti-user"></i><h5 class="m-0 ps-2">Address</h5>
+                </a>
             </div>
         </div>
     </div>
