--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -131,6 +131,7 @@
     <script src="~/js/coditech/common/coditechnotification.js"></script>
     <script src="~/js/coditech/adminrolemaster.js"></script>
     <script src="~/js/coditech/gymmemberdetails.js"></script>
+    <script src="~/js/coditech/user.js"></script>
 </body>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
