--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseDepartment/_AssociateUnAssociateCentrewiseDepartment.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseDepartment/_AssociateUnAssociateCentrewiseDepartment.cshtml
@@ -29,14 +29,14 @@
                     @if (Model.OrganisationCentrewiseDepartmentId > 0)
                     {
                         <span>
-                            Are you sure that you want to deallocate <span class="font-15"> @Model.DepartmentName</span> from <span class="font-15">@Model.CentreName</span> Centre?
+                            Are you sure that you want to deallocate <span class="font-15"> @Model.DepartmentName</span> Department from <span class="font-15">@Model.CentreName</span> Centre?
                         </span>
                     }
                     else
                     {
                         <span>
                             Are you sure that you want to allocate <span class="font-15">
-                                @Model.DepartmentName
+                                @Model.DepartmentName Department
                             </span> to <span class="font-15">
                                 @Model.CentreName
                             </span> Centre?
