--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
@@ -3,12 +3,19 @@
     ViewBag.Title = Model.EmployeeId > 0 ? "Update Employee" : "Add Employee";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
+    keyValuePairs.Add("EmployeeId", Model.EmployeeId.ToString());
+    keyValuePairs.Add("PersonId", Model.PersonId.ToString());
+}
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-2">
+                @Html.Partial("~/Views/EmployeeMaster/EmployeeDetailsSidePannel.cshtml", keyValuePairs)
+            </div>
+            <div class="col-lg-10">
                 <div class="card">
                     <div class="card-header">
                         <div class="row align-items-center">
