--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/UpdateEmployeeeDetails.cshtml
@@ -7,7 +7,6 @@
     keyValuePairs.Add("EmployeeId", Model.EmployeeId.ToString());
     keyValuePairs.Add("PersonId", Model.PersonId.ToString());
 }
-}
 <!-- Page Content-->
 <div class="page-content mt-5">
     <div class="container-fluid">
@@ -32,7 +31,7 @@
                         </div>  <!--end row-->
                     </div>
                     <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
+                        @using (Html.BeginForm("UpdateEmployeeOtherDetail", controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.EmployeeId)
                             <div class="row">
@@ -84,9 +83,9 @@
                                         @Html.LabelFor(x => x.ReportingEmployeeId, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.ReportingEmployeeId, new { @class = "form-control", type = "number" })
                                         @Html.ValidationMessageFor(x => x.ReportingEmployeeId)
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
+                                    </div>
+                                    <div class="col-lg-4">
+                                        <div class="mb-3">
                                             @Html.LabelFor(x => x.PANCardNumber, new { @class = "form-label required" })
                                             @Html.TextBoxFor(x => x.PANCardNumber, new { @class = "form-control", type = "number" })
                                             @Html.ValidationMessageFor(x => x.PANCardNumber)
@@ -114,8 +113,8 @@
                                         @Html.ValidationMessageFor(x => x.AdharCardNumber)
                                     </div>
                                 </div>
-                          </div>
-                         
+                            </div>
+
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
@@ -123,5 +122,5 @@
                 </div>
             </div>
         </div>
-    </div>  
+    </div>
 </div>
