--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymBodyMeasurementType/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymBodyMeasurementType/List.cshtml
@@ -11,7 +11,7 @@
                 <div class="card">
                     <div class="card-header">
                         <span class="card-title">@AdminResources.LabelGymBodyMeasurementTypeList</span>
-                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add GymBodyMeasurementType</a>
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Body Measurement Type</a>
                         <p class="text-muted mb-0"></p>
                     </div>
                     <div class="card-body">
