Code Correction For  GeneralRunningNumbers.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -133,6 +133,7 @@
     <script src="~/js/coditech/gymmemberdetails.js"></script>
     <script src="~/js/coditech/user.js"></script>
     <script src="~/js/coditech/OrganisationCentrewiseDepartment.js"></script>
+    <script src="~/js/coditech/GeneralRunningNumbers.js"></script>
 </body>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
