--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/CreateEdit.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = Model.GeneralRunningNumberId > 0 ? "Update Running Numbers" : "Add Running Numbers";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "CoditechCommon.GetGeneralRunningNumbersByCentreCode()" };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -37,36 +38,35 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="col-lg-4">
-                                        <div class="mb-3">
-                                            @Html.LabelFor(x => x.KeyFieldEnumId, new { @class = "form-label required" })
-                                            @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                        {
-                                        DropdownType = DropdownTypeEnum.Enum.ToString(),
-                                        DropdownName = "KeyFieldEnumId",
-                                        DropdownSelectedValue = Model.GeneralRunningNumberId
-                                        .ToString()
-                                        })
-                                            @Html.ValidationMessageFor(x => x.KeyFieldEnumId)
-                                        </div>
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.KeyFieldEnumId, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                                    {
+                                    DropdownType = DropdownTypeEnum.Enum.ToString(),
+                                    DropdownName = "KeyFieldEnumId",
+                                    DropdownSelectedValue = Model.GeneralRunningNumberId
+                                    .ToString()
+                                    })
+                                        @Html.ValidationMessageFor(x => x.KeyFieldEnumId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.GeneralFinancialYearId, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.GeneralFinancialYearId, new { @class = "form-label"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                     {
                                     DropdownType = DropdownTypeEnum.FinancialYear.ToString(),
                                     DropdownName = "GeneralFinancialYearId",
                                     DropdownSelectedValue = Model.GeneralFinancialYearId.ToString()
                                     })
+                                        @* @Html.TextBoxFor(x => x.GeneralFinancialYearId, new { @class = "form-control"}) *@
                                         @Html.ValidationMessageFor(x => x.GeneralFinancialYearId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.CentreCode, new { @class = "form-control"})
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.CentreCode)
                                     </div>
                                 </div>
