--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/_List.cshtml
@@ -25,8 +25,11 @@
                             <td>@item.IsSequenceReset</td>
                             <td>@item.Separator</td>
                             <td>@item.Prefix</td>
-                            <td>@item.BackDatedPrefix</td>
                             <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)</td>
+                            <td class="text-center">
+                                <a href="../@controllerName/Edit?generalRunningNumberId=@item.GeneralRunningNumberId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Delete?generalRunningNumberIds=@item.GeneralRunningNumberId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                            </td>
                         </tr>
                     }
                 }
@@ -35,4 +38,3 @@
     </div>
 </div>
 @Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
-@* @Html.Partial("~/Views/Shared/_ModelPopUp.cshtml", addFollowUpModel) *@
