--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/CreateEdit.cshtml
@@ -32,8 +32,28 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.Description, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.Description, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
+                                        @Html.ValidationMessageFor(x => x.CentreCode)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.GeneralFinancialYearId, new { @class = "form-label" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                               {
+                                   DropdownType = DropdownTypeEnum.FinancialYear.ToString(),
+                                   DropdownName = "GeneralFinancialYearId",
+                                   DropdownSelectedValue = Model.GeneralFinancialYearId.ToString()
+                               })
+                                        @* @Html.TextBoxFor(x => x.GeneralFinancialYearId, new { @class = "form-control"}) *@
+                                        @Html.ValidationMessageFor(x => x.GeneralFinancialYearId)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.Description, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.Description, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Description)
                                     </div>
                                 </div>
@@ -41,104 +61,84 @@
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.KeyFieldEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                    {
-                                    DropdownType = DropdownTypeEnum.Enum.ToString(),
-                                    DropdownName = "KeyFieldEnumId",
-                                    DropdownSelectedValue = Model.GeneralRunningNumberId
-                                    .ToString()
-                                    })
-                                        @Html.ValidationMessageFor(x => x.KeyFieldEnumId)
+                                       {
+                                           DropdownSelectedValue = Model.KeyFieldEnumId.ToString(),
+                                           DropdownName = "KeyFieldEnumId",
+                                   GroupCode = DropdownTypeEnum.GeneralRunningNumberFor.ToString()
+                                       })   @Html.ValidationMessageFor(x => x.KeyFieldEnumId)
                                     </div>
                                 </div>
+                               
+                                
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.GeneralFinancialYearId, new { @class = "form-label"})
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                                    {
-                                    DropdownType = DropdownTypeEnum.FinancialYear.ToString(),
-                                    DropdownName = "GeneralFinancialYearId",
-                                    DropdownSelectedValue = Model.GeneralFinancialYearId.ToString()
-                                    })
-                                        @* @Html.TextBoxFor(x => x.GeneralFinancialYearId, new { @class = "form-control"}) *@
-                                        @Html.ValidationMessageFor(x => x.GeneralFinancialYearId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required"})
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
-                                        @Html.ValidationMessageFor(x => x.CentreCode)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.DisplayFormat, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.DisplayFormat, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.DisplayFormat, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.DisplayFormat, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.DisplayFormat)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.StartSequence, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.StartSequence, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.StartSequence, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.StartSequence, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.StartSequence)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.CurrentSequnce, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.CurrentSequnce, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.CurrentSequnce, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.CurrentSequnce, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.CurrentSequnce)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsSequenceReset, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.IsSequenceReset, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.IsSequenceReset, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.IsSequenceReset, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.IsSequenceReset)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.Separator, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.Separator, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.Separator, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.Separator, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Separator)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.Prefix, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.Prefix, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.Prefix, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.Prefix, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.Prefix)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsBackDated, new { @class = "form-label required"})
-                                        @Html.TextBoxFor(x => x.IsBackDated, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.IsBackDated, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.IsBackDated, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.IsBackDated)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.BackDatedPrefix, new { @class = "form-label"})
-                                        @Html.TextBoxFor(x => x.BackDatedPrefix, new { @class = "form-control"})
+                                        @Html.LabelFor(x => x.BackDatedPrefix, new { @class = "form-label" })
+                                        @Html.TextBoxFor(x => x.BackDatedPrefix, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.BackDatedPrefix)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsRowLock, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.IsRowLock, new { @class = "form-label required" })
                                         <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsRowLock, new { @class = "form-check-input"})
+                                            @Html.CheckBoxFor(x => x.IsRowLock, new { @class = "form-check-input" })
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label required" })
                                         <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input"})
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
                                         </div>
                                     </div>
                                 </div>
